; ModuleID = '/home/carl/AnghaBench/tmux/extr_tty.c_tty_set_italics.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_tty.c_tty_set_italics.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty = type { i32 }

@TTYC_SITM = common dso_local global i32 0, align 4
@global_options = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"default-terminal\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"screen\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"screen-\00", align 1
@TTYC_SMSO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tty*)* @tty_set_italics to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tty_set_italics(%struct.tty* %0) #0 {
  %2 = alloca %struct.tty*, align 8
  %3 = alloca i8*, align 8
  store %struct.tty* %0, %struct.tty** %2, align 8
  %4 = load %struct.tty*, %struct.tty** %2, align 8
  %5 = getelementptr inbounds %struct.tty, %struct.tty* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @TTYC_SITM, align 4
  %8 = call i64 @tty_term_has(i32 %6, i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %25

10:                                               ; preds = %1
  %11 = load i32, i32* @global_options, align 4
  %12 = call i8* @options_get_string(i32 %11, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  store i8* %12, i8** %3, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = call i64 @strcmp(i8* %13, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %24

16:                                               ; preds = %10
  %17 = load i8*, i8** %3, align 8
  %18 = call i64 @strncmp(i8* %17, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i32 7)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %16
  %21 = load %struct.tty*, %struct.tty** %2, align 8
  %22 = load i32, i32* @TTYC_SITM, align 4
  %23 = call i32 @tty_putcode(%struct.tty* %21, i32 %22)
  br label %29

24:                                               ; preds = %16, %10
  br label %25

25:                                               ; preds = %24, %1
  %26 = load %struct.tty*, %struct.tty** %2, align 8
  %27 = load i32, i32* @TTYC_SMSO, align 4
  %28 = call i32 @tty_putcode(%struct.tty* %26, i32 %27)
  br label %29

29:                                               ; preds = %25, %20
  ret void
}

declare dso_local i64 @tty_term_has(i32, i32) #1

declare dso_local i8* @options_get_string(i32, i8*) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i64 @strncmp(i8*, i8*, i32) #1

declare dso_local i32 @tty_putcode(%struct.tty*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
